--- a/boards/arm/vistron_vdr400/vistron_vdr400.dts
+++ b/boards/arm/vistron_vdr400/vistron_vdr400.dts
@@ -15,6 +15,8 @@
 	chosen {
 		zephyr,sram = &sram0;
 		zephyr,flash = &flash0;
+		zephyr,console = &usart2;
+		zephyr,shell-uart = &usart2;
 	};
 
 	leds {
@@ -30,7 +32,7 @@
 	};
 
 	aliases {
-		led0 = &red_led_3;
+		led0 = &red_led_2;
 		watchdog0 = &iwdg;
 	};
 };
@@ -56,5 +58,12 @@
 	ahb-prescaler = <1>;
 	apb1-prescaler = <2>;
 	apb2-prescaler = <1>;
+};
+
+&usart2 {
+	pinctrl-0 = <&usart2_tx_pa2 &usart2_rx_pa3>;
+	pinctrl-names = "default";
+	current-speed = <115200>;
+	status = "okay";
 };
 
